Fix: Update Workspace and Nginx Config

--- a/.env.example
+++ b/.env.example
@@ -66,7 +66,7 @@ MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 # Accepted values: mariadb - mysql
 PMA_VERSION=latest
 PMA_DB_ENGINE=mysql
-PMA_PORT=8080
+PMA_PORT=8081
 PMA_MAX_EXECUTION_TIME=600
 PMA_MEMORY_LIMIT=256M
 PMA_UPLOAD_LIMIT=2G
@@ -76,3 +76,12 @@ PMA_UPLOAD_LIMIT=2G
 REDIS_VERSION=latest
 REDIS_PORT=6379
 REDIS_PASSWORD=secret_redis
+
+### WORKSPACE #############################################
+WORKSPACE_SSH_PORT=2222
+WORKSPACE_BROWSERSYNC_HOST_PORT=3000
+WORKSPACE_BROWSERSYNC_UI_HOST_PORT=3001
+WORKSPACE_VUE_CLI_SERVE_HOST_PORT=8080
+WORKSPACE_VUE_CLI_UI_HOST_PORT=8001
+WORKSPACE_ANGULAR_CLI_SERVE_HOST_PORT=4200
+WORKSPACE_VITE_PORT=5173
