--- a/nginx/sites/app.conf.example
+++ b/nginx/sites/app.conf.example
@@ -20,7 +20,7 @@ server {
     location ~ \.php$ {
         try_files $uri /index.php =404;
         # php74-fpm, php80-fpm, php81-fpm, etc
-        fastcgi_pass php74-fpm:9000;
+        fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
