--- a/nginx/sites/node.conf.example
+++ b/nginx/sites/node.conf.example
@@ -1,7 +1,7 @@
 #server {
 #    listen 80;
-#    server_name node.com.co;
-#    return 301 https://node.com.co$request_uri;
+#    server_name node.test;
+#    return 301 https://$host$request_uri;
 #}
 
 server {
@@ -12,17 +12,17 @@ server {
     #listen 443;
     #listen [::]:443;
 
-    server_name node.com.co;
+    server_name node.test;
 
     #ssl on;
-    #ssl_certificate /var/certs/node.com.co/cert.pem;
-    #ssl_certificate_key /var/certs/node.com.co/privkey.pem;
+    #ssl_certificate /var/certs/node.test/cert.pem;
+    #ssl_certificate_key /var/certs/node.test/privkey.pem;
     #ssl_protocols       SSLv3 TLSv1 TLSv1.1 TLSv1.2;
     #ssl_ciphers         HIGH:!aNULL:!MD5;
 
 
     location / {
-        proxy_pass http://node.com.co:3001;
+        proxy_pass http://node.test:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -42,6 +42,6 @@ server {
         log_not_found off;
     }
 
-    error_log /var/log/nginx/node.com.co.local_error.log;
-    access_log /var/log/nginx/node.com.co.local_access.log;
+    error_log /var/log/nginx/node.test.local_error.log;
+    access_log /var/log/nginx/node.test.local_access.log;
 }
